Add JSON Schema for inventory

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -127,6 +127,14 @@
                     "J. Kunze", "M. Haye", "E. Hetzner", "M. Reyes", "C. Snavely"
                   ],
                   date: "12 August 2008"
+                },
+                "JSON-Schema": {
+                    title: "JSON Schema Validation: A Vocabulary for Structural Validation of JSON",
+                    href: "https://json-schema.org/latest/json-schema-validation.html",
+                    authors: [
+                      "A. Wright", "H Andrews"
+                    ],
+                    date: "20 September 2018"
                 }
             }
         };
@@ -414,6 +422,12 @@
             An OCFL Object Inventory MUST follow the [[!JSON]] structure described in this section and MUST be named
             <code>inventory.json</code>.
         </p>
+        <blockquote class="informative">
+            <p>
+                Non-normative note: A [[JSON-Schema]] for validating OCFL Object Inventory files is provided at
+                <a href="inventory_schema.json">inventory_schema.json</a>.
+            </p>
+        </blockquote>
 
         <section id="inventory-structure">
             <h2>Basic Structure</h2>
