Change jsonld -> json, remove unused JSON-LD reference

--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -99,14 +99,6 @@
                     title: " Reference Model for an Open Archival Information System (OAIS), Issue 2",
                     href: "https://public.ccsds.org/pubs/650x0m2.pdf",
                     date: "June 2012"
-                },
-                "JSON-LD-1.1": {
-                    title: "JSON-LD 1.1: A JSON-based Serialization for Linked Data",
-                    href: "https://json-ld.org/spec/latest/json-ld/",
-                    authors: [
-                        "Manu Sporny", "Dave Longley", "Gregg Kellogg", "Markus Lanthaler", "Niklas Lindström"
-                    ],
-                    date: "7 June 2018"
                 }
             }
         };
@@ -259,18 +251,18 @@
                       ├── ocfl_1.0.txt (optional OCFL spec)
                       ├── d45be626e024
                       |   ├── 0=ocfl_object_1.0
-                      |   ├── inventory.jsonld
-                      |   ├── inventory.jsonld.sha512
+                      |   ├── inventory.json
+                      |   ├── inventory.json.sha512
                       |   └── v1...
                       ├── d45be626e036
                       |   ├── 0=ocfl_object_1.0
-                      |   ├── inventory.jsonld
-                      |   ├── inventory.jsonld.sha512
+                      |   ├── inventory.json
+                      |   ├── inventory.json.sha512
                       |   └── v1...
                       ├── 3104edf0363a
                       |   ├── 0=ocfl_object_1.0
-                      |   ├── inventory.jsonld
-                      |   ├── inventory.jsonld.sha512
+                      |   ├── inventory.json
+                      |   ├── inventory.json.sha512
                       |   └── v1...
                       └── ...
                   </pre>
