--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -265,13 +265,13 @@
             <dfn>OCFL Object Root</dfn>:
         <dt>
         <dd>
-            The base directory of an <a>OCFL Object</a>, identified by a NamAsTe file "0=ocfl_object_1.0".
+            The base directory of an <a>OCFL Object</a>, identified by a [[NAMASTE]] file "0=ocfl_object_1.0".
         </dd>
         <dt>
             <dfn>OCFL Storage Root</dfn>:
         </dt>
         <dd>
-            A base directory used to store OCFL Objects, identified by a NamAsTe file "0=ocfl_1.0".
+            A base directory used to store OCFL Objects, identified by a [[NAMASTE]] file "0=ocfl_1.0".
         </dd>
         <dt>
             <dfn>OCFL Version</dfn>:
