Clarify object stores are our friends too.

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -204,9 +204,9 @@
     <dl>
         <dt><dfn>Existing File Path</dfn>:</dt>
         <dd>
-            The file path of a file on disk, relative to the <a>OCFL Object 
-            Root</a>. Existing file paths are used in the <a>Manifest</a> 
-            within an <a>Inventory</a>.
+            The file path of a file on disk or in an object store, relative to 
+            the <a>OCFL Object Root</a>. Existing file paths are used in the 
+            <a>Manifest</a> within an <a>Inventory</a>.
         </dd>
         <dt>
             <dfn>Digest</dfn>:
