Remove reference to JSON-LD

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -219,7 +219,7 @@
             <dfn>Inventory</dfn>:
         </dt>
         <dd>
-            A file, expressed in JSON-LD, that tracks the history and current 
+            A file, expressed in JSON, that tracks the history and current 
             state of an OCFL Object.
         </dd>
         <dt>
