Also added PairTree and Spec references

--- a/draft/implementation-notes/index.html
+++ b/draft/implementation-notes/index.html
@@ -99,6 +99,18 @@
                     title: " Reference Model for an Open Archival Information System (OAIS), Issue 2",
                     href: "https://public.ccsds.org/pubs/650x0m2.pdf",
                     date: "June 2012"
+                },
+                "OCFL-Spec": {
+                    title: "OCFL Specification",
+                    href: "../spec"
+                },
+                "PairTree": {
+                  title: "Pairtrees for Object Storage",
+                  href: "https://confluence.ucop.edu/display/Curation/PairTree",
+                  authors: [
+                    "J. Kunze", "M. Haye", "E. Hetzner", "M. Reyes", "C. Snavely"
+                  ],
+                  date: "12 August 2008"
                 }
             }
         };
@@ -259,7 +271,7 @@
                   </pre>
               </li>
               <li>
-                  PairTree: [[!Pairtree]] is designed to overcome the limitations on the number of files in a
+                  PairTree: [[!PairTree]] is designed to overcome the limitations on the number of files in a
                   directory that most file systems have. It creates hierarchy of directories by mapping identifier
                   strings to directory paths two characters at a time. For numerical identifiers specified in
                   hexadecimal this means that there are a maximum of 256 items in any directory which is well
